Opened 14 years ago

Closed 14 years ago

#1295 closed defect (fixed)

Segfault with -deinterlace, using 1080i (and larger) MTS as input

Reported by: burek Owned by:
Priority: normal Component: undetermined
Version: unspecified Keywords: ffmpeg regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

From #ffmpeg IRC channel:

Uploaded sample input at upload.ffmpeg.org ftp: 5meg_segfault_mts_deinterlace_mkv_mp4.mts

mike@odin ~ $ ffmpeg -threads 0 -i 00140.MTS -deinterlace -s hd720 -vcodec libx264 -preset slow -crf 20.0 -acodec libfaac -ab 96k -ar 48000 -ac 2  -r 25 out_video.mp4
ffmpeg version N-40548-geee89f6 Copyright (c) 2000-2012 the FFmpeg developers
  built on May 10 2012 01:27:11 with gcc 4.6.2
  configuration: --prefix=/usr --libdir=/usr/lib64 --shlibdir=/usr/lib64 --mandir=/usr/share/man --enable-shared --cc=x86_64-pc-linux-gnu-gcc --cxx=x86_64-pc-linux-gnu-g++ --ar=x86_64-pc-linux-gnu-ar --optflags='-march=native -mtune=native -pipe -O2' --extra-cflags='-march=native -mtune=native -pipe -O2' --extra-cxxflags='-march=native -mtune=native -pipe -O2' --enable-static --enable-gpl --enable-version3 --enable-postproc --enable-avfilter --disable-stripping --disable-debug --disable-doc --enable-openssl --enable-nonfree --enable-gnutls --enable-libmp3lame --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libtheora --enable-libvorbis --enable-libx264 --enable-libxvid --enable-libaacplus --enable-nonfree --enable-libfaac --enable-nonfree --enable-libdc1394 --enable-openal --disable-indev=v4l --enable-x11grab --enable-frei0r --enable-fontconfig --enable-libfreetype --enable-libass --enable-pthreads --enable-libopencore-amrwb --enable-libopencore-amrnb --enable-libbluray --enable-libgsm --enable-libmodp  libavutil      51. 50.100 / 51. 50.100
  libavcodec     54. 21.101 / 54. 21.101
  libavformat    54.  4.100 / 54.  4.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 72.105 /  2. 72.105
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 11.100 /  0. 11.100
  libpostproc    52.  0.100 / 52.  0.100
[h264 @ 0x1517d50] Increasing reorder buffer to 1
Input #0, mpegts, from '00140.MTS':
  Duration: 00:00:55.23, start: 0.801622, bitrate: 16369 kb/s
  Program 1 
    Stream #0:0[0x1011]: Video: h264 (High) (HDMV / 0x564D4448), yuv420p, 1920x1080 [SAR 1:1 DAR 16:9], 50 fps, 50 tbr, 90k tbn, 50 tbc
    Stream #0:1[0x1100]: Audio: ac3 (AC-3 / 0x332D4341), 48000 Hz, 5.1(side), s16, 384 kb/s
    Stream #0:2[0x1200]: Subtitle: hdmv_pgs_subtitle ([144][0][0][0] / 0x0090)
-deinterlace is deprecated, use -filter:v yadif instead
File 'out_video.mp4' already exists. Overwrite ? [y/N] y
w:1920 h:1080 pixfmt:yuv420p tb:1/1000000 sar:1/1 sws_param:flags=2
[buffersink @ 0x151ae60] No opaque field provided
[scale @ 0x151b020] w:1920 h:1080 fmt:yuv420p sar:1/1 -> w:1280 h:720 fmt:yuv420p sar:1/1 flags:0x4
[libx264 @ 0x1519390] using SAR=1/1
[libx264 @ 0x1519390] using cpu capabilities: MMX2 SSE2Fast SSSE3 Cache64
[libx264 @ 0x1519390] profile High, level 3.1
[libx264 @ 0x1519390] 264 - core 124 r2197 69a0443 - H.264/MPEG-4 AVC codec - Copyleft 2003-2012 - http://www.videolan.org/x264.html - options: cabac=1 ref=5 deblock=1:0:0 analyse=0x3:0x113 me=umh subme=8 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=6 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=2 b_bias=0 direct=3 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=50 rc=crf mbtree=1 crf=20.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
[libfaac @ 0x151a6d0] channel_layout not specified
[ac3 @ 0x1518550] channel layout does not match number of channels
Guessed Channel Layout for  Input Stream #0.1 : stereo
Output #0, mp4, to 'out_video.mp4':
  Metadata:
    encoder         : Lavf54.4.100
    Stream #0:0: Video: h264 (![0][0][0] / 0x0021), yuv420p, 1280x720 [SAR 1:1 DAR 16:9], q=-1--1, 25 tbn, 25 tbc
    Stream #0:1: Audio: aac (@[0][0][0] / 0x0040), 48000 Hz, stereo, s16, 96 kb/s
Stream mapping:
  Stream #0:0 -> #0:0 (h264 -> libx264)
  Stream #0:1 -> #0:1 (ac3 -> libfaac)
Press [q] to stop, [?] for help
Segmentation fault

I've tested it with the latest git static ffmpeg (http://ffmpeg.gusari.org/static/) and it also produces segfault, but I don't have ffmpeg_g to do a gdb dump and leave the output here, so, whoever tries to reproduce this issue could try with gdb and ffmpeg_g too.

It appears that only videos with sizes larger than 1080i produce this segfault, smaller don't (according to the guy that originally discovered the issue on #ffmpeg).

Change History (3)

comment:1 by burek, 14 years ago

Forgot to add, removing -deinterlace seems to solve the problem.

comment:2 by Carl Eugen Hoyos, 14 years ago

Is this only reproducible when using an external library (libx264 and libfaac), or also if you are using internal encoders or -an or -f null ?

comment:3 by Michael Niedermayer, 14 years ago

Keywords: ffmpeg regression added
Reproduced by developer: set
Resolution: fixed
Status: newclosed

fix will be in my next git push

Note: See TracTickets for help on using tickets.