ffmpeg: fix deinterlace

Fixes ticket1295

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>